first elements of front-end

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,12 @@
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
-$orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+
+// COOLFIT COLORS
+$background-gray: #E5E5E5;
+$light-gray: #C8C8C8;
+$gray: #636363;
+$dark-gray: #4C4C4C;
+$orange: #FA9800;
