--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,12 @@
 .avatar {
-  width: 40px;
+  width: 45px;
   border-radius: 50%;
+  border: 1px solid $background-gray;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
 .avatar-large {
-  width: 56px;
+  width: 60px;
   border-radius: 50%;
-}
-.avatar-bordered {
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: 2px solid $background-gray;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
