--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,9 @@
-.navbar-lewagon {
+.navbar-coolfit {
   justify-content: space-between;
-  background: white;
+  background: $gray;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-coolfit .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
