--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TODO</title>
+    <title>CoolFit</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -11,7 +11,11 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <% if params[:action] == "home" %>
+      <%= render 'shared/banner' %>
+    <% else %>
+      <%= render 'shared/navbar' %>
+    <% end %>
     <%= render 'shared/flashes' %>
 
     <div class="container mt-4 page-wrapper">
@@ -19,6 +23,8 @@
     </div>
 
     <%= render 'shared/footer' %>
+
+    <p class="alert"><%= alert %></p>
 
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
