banner and landing page

--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -1,5 +1,11 @@
-.logo {
+.navbar-logo {
   font-family: 'Exo 2', sans-serif;
   color: $orange;
   font-size: 34px;
+}
+
+.banner-logo {
+  font-family: 'Exo 2', sans-serif;
+  color: $orange;
+  font-size: 58px;
 }
