--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,16 +6,17 @@
 }
 
 .banner h1 {
-  margin: 0;
-  color: white;
+  margin-bottom: 15px;
+  color: $background-gray;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
+  font-weight: light;
 }
 
-.banner p {
-  font-size: 20px;
-  color: white;
+.banner h3 {
+  color: $background-gray;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-weight: lighter;
 }
+
+
