--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -10,3 +10,43 @@ h1 {
 h3 {
   font-size: 34px;
 }
+
+// CARDS INDEX
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
+
+// MEDIA RESPONSIVENESS
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .cards#landing {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 576px) {
+  .cards#landing {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 768px) {
+  .cards#landing {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 992px) {
+  .cards#landing {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1200px) {
+  .cards#landing {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
