--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -6,7 +6,7 @@
       <h3>Browse cool activities going on around you and join in!</h3>
     </div>
 
-    <div class="banner-container">
+    <div class="banner-search-container">
       <div class="banner-search-bar">
         <%= form_tag '#', method: :get, style:"width:100%" do %>
         <%= text_field_tag :query,
