--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,16 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-coolfit">
   <%= link_to "CoolFit", "#", class: "navbar-logo" %>
 
+    <div>
+      <%= form_tag '#', method: :get, style:"width:100%" do %>
+      <%= text_field_tag :query,
+        params[:query], class: "form-control",
+        placeholder: "Type in your address...", class: "navbar-search" %>
+        <%= submit_tag 'Search!', class: "btn btn-search-navbar" %>
+      <% end %>
+    </div>
+
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
