--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,18 +4,19 @@
 <!-- app/views/reviews/new -->
 <!-- ... -->
 <!-- ... -->
-<%= simple_form_for(@booking, html: { class: "booking_form" }) do |f| %>
-
-
+<%= simple_form_for(@activity, @booking html: { class: "booking_form" }) do |f| %>
 
 <div class="container">
   <div class="row">
     <div class="col-xs-4">
       <%= simple_form_for @booking do |f| %>
-        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", id: "add rating" %>
         <%= f.submit, class: "hidden"%>
 
       <% end %>
     </div>
   </div>
 </div>
+
+
+<%= link_to "return to index", activities_path %>
