--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -3,13 +3,13 @@
 <div class="cards">
   <% @activities.each do |activity| %>
 
-    <div class="card-activity">
+    <div class="card-index">
       <% if activity.photo_db.nil? %>
-        <%= cl_image_tag activity.photo_user,crop: :fill, gravity: :face, class: 'card-activity-img' %>
+        <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
       <% else %>
-        <%= image_tag activity.photo_db,crop: :fill, gravity: :face, class: 'card-activity-img' %>
+        <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
       <% end %>
-      <div class="card-activity-infos">
+      <div class="card-index-infos">
         <h3><%= activity.name %></h3>
       </div>
     </div>
