Add dotenv - Protect my secret data in .env file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <h3> <%= @top_category1.description %></h3>
 
-<div class="cards">
+<div class="cards" id="landing">
   <% @top_category1.activities.each do |activity| %>
 
       <div class="card-landing">
@@ -24,7 +24,7 @@
 
 <h3> <%= @top_category2.description %></h3>
 
-<div class="cards">
+<div class="cards" id="landing">
   <% @top_category2.activities.each do |activity| %>
 
       <div class="card-landing">
@@ -44,7 +44,7 @@
 
 <h3> <%= @top_category3.description %></h3>
 
-<div class="cards">
+<div class="cards" id="landing">
   <% @top_category3.activities.each do |activity| %>
 
       <div class="card-landing">
