--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,12 +1,10 @@
 <!-- show.html.erb -->
 
-<%= simple_form_for(@activity, @booking) do |f| %>
-
+<%= simple_form_for(@booking, html: { class: "booking_form" },:url => activity_booking_path, method: :patch) do |f| %>
 <div class="container">
   <div class="row">
     <div class="col-xs-4">
-        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", id: "review_rating" %>
-        <%= f.submit, class: "btn btn-primary"%>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", id: "booking_rating" %>
       <% end %>
     </div>
   </div>
