--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -17,7 +17,9 @@
   background-color: $orange;
   color: $background-gray;
   border-radius: 10px;
-  margin-left: 4px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  filter: brightness(95%);
 }
 
 .btn-search-navbar:hover {
