--- a/app/assets/stylesheets/components/_layout.scss
+++ b/app/assets/stylesheets/components/_layout.scss
@@ -1,3 +1,7 @@
+.index-container {
+  display: flex;
+}
+
 .page-wrapper{
   min-height: calc(100vh - 120px);
   overflow: auto;
@@ -24,6 +28,13 @@ h3 {
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 40px;
 }
+
+// CARDS INDEX
+
+.cards-index {
+  flex-grow: 1;
+}
+
 
 // MEDIA RESPONSIVENESS
 
