--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,10 @@
         <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
+          <p>owner Ratings: <%= activity.owner.average_owner_rating %></p>
+          <br>
+
+
         </div>
       </div>
   <% end %>
@@ -35,6 +39,9 @@
         <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
+          <p>owner Ratings: <%= activity.owner.average_owner_rating %></p>
+          <br>
+
         </div>
       </div>
   <% end %>
@@ -55,6 +62,8 @@
         <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
+          <p>Owner Ratings: <%= activity.owner.average_owner_rating %></p>
+
         </div>
       </div>
   <% end %>
