fitness level added on home page

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -14,6 +14,7 @@
           <% end %>
           <div class="card-index-infos">
             <h3><%= activity.name %></h3>
+              <% end %>
           </div>
         </div>
       <% end %>
