--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -5,7 +5,8 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
 .avatar-large {
-  width: 60px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
   border: 2px solid $background-gray;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
