changed user into owner in the dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -83,7 +83,7 @@
       </div>
 
       <div class="card-btns">
-        <p>Rate your experience</p>
+        <p>Rate your experience!</p>
         <!-- ADD LINK TO INPUT RATING HERE -->
       </div>
 
