--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,6 @@
   background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url(sports_mosaic.jpg);
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
 }
 
 .banner h1 {
@@ -20,3 +19,21 @@
 }
 
 
+.banner-container {
+  padding-top: 25vh;
+  padding-bottom: 8vh;
+}
+
+.banner-item{
+  color: $light-gray;
+  text-decoration: none;
+  font: $body-font;
+  float: right;
+  padding-right: 4vh;
+  padding-top: 2vh;
+  justify-content: space-between;
+}
+
+.banner-item:hover{
+  color:$orange;
+}
