--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
-<h2>Sign up</h2>
+<div>
+<h2 class ="form-title">Sign up</h2>
+</div>
+<div class="container mt-4 container-sign">
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -7,19 +10,22 @@
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "email", style: "background-color: #4C4C4C; opacity: 0.7; border: none; outline: none; color: #C8C8C8;" } %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password", style: "background-color: #4C4C4C; opacity: 0.7; border: none; outline: none; color: #C8C8C8;"} %>
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password", style: "background-color: #4C4C4C; opacity: 0.7; border: none; outline: none; color: #C8C8C8;" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-actions text-central">
+    <%= f.button :submit, "Sign up", style: "color: #C8C8C8; font-family: 'Lato', 'sans-serif';" %>
   </div>
 <% end %>
-
+<div class="or-text">Or</div>
+<div class="hr"></div>
 <%= render "devise/shared/links" %>
+
+</div>
