--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,17 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+<%- if controller_name != 'sessions'%>
+<div class="text-central">
+  <%= link_to "Log in", new_session_path(resource_name), style: "color: #C8C8C8; font-family: 'Lato', 'sans-serif'; text-decoration: none; text-align: center;" %><br />
 <% end %>
+</div>
 
+<div class="text-central">
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to "Sign up", new_registration_path(resource_name), style: "color: #C8C8C8; font-family: 'Lato', 'sans-serif'; text-decoration: none; text-align: center;"%><br />
 <% end %>
+</div>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <%= link_to "Forgot your password?", new_password_path(resource_name), style: "color: #C8C8C8; font-family: 'Lato', 'sans-serif'; text-decoration: none; text-align: center;" %><br />
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
