--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -11,20 +11,12 @@
   </head>
 
   <body>
-    <%= render 'shared/flashes' %>
-    <% if params[:controller] == "devise/registrations" || params[:controller] == "devise/sessions" %>
-    <div class= "devise-background">
-    <% else %>
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/banner' %>
     <div class="container mt-4 page-wrapper">
-    <% end %>
       <%= yield %>
     </div>
-
     <%= render 'shared/footer' %>
-
     <p class="alert"><%= alert %></p>
-
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
