--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,20 +1,27 @@
 <div class="banner">
-  <div class="container">
+  <div class="banner-link-items ">
+    <%= link_to "CoolFit", "#", class: "navbar-logo", style: "padding-left: 3vh;" %>
+    <%= link_to "How it works", "#", class: "banner-item", style: "text-decoration: none;" %>
+    <%= link_to "Locations", "#", class: "banner-item", style: "text-decoration: none;" %>
+    <%= link_to "Sign In", new_user_registration_path, class: "banner-item", style: "text-decoration: none;" %>
+  </div>
+    <div class="container banner-container">
 
-    <div>
-      <h1>Make friends. Boost your health.<br />Join <span class="banner-logo"> Coolfit</span> </h1>
-      <h3>Browse cool activities going on around you and join in!</h3>
-    </div>
-
-    <div class="banner-search-container">
-      <div class="banner-search-bar">
-        <%= form_tag '#', method: :get, style:"width:100%" do %>
-        <%= text_field_tag :query,
-          params[:query], class: "form-control",
-          placeholder: "Type in your address...", class: "banner-search" %>
-          <%= submit_tag 'Search!', class: "btn btn-search" %>
-        <% end %>
+      <div>
+        <h1>Make friends. Boost your health.<br />Join <span class="banner-logo"> Coolfit</span> </h1>
+        <h3>Browse cool activities going on around you and join in!</h3>
       </div>
-    </div>
+
+      <div class="banner-search-container">
+        <div class="banner-search-bar">
+          <%= form_tag activities_path, method: :get, style:"width:100%" do %>
+          <%= text_field_tag :location_query,
+            params[:location_query], class: "form-control",
+            placeholder: "Type in your address...", class: "banner-search" %>
+            <%= submit_tag 'Search!', class: "btn btn-search" %>
+          <% end %>
+        </div>
+      </div>
   </div>
 </div>
+
