--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -16,6 +16,15 @@
             <h3><%= activity.name %></h3>
               <% end %>
           </div>
+          <div>
+            <% if activity.owner != current_user %>
+              <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
+                <%= link_to "♡", activity_interest_path(activity), method: :post,  class: "admin-btn" %>
+              <% else %>
+                <%= link_to "♥", activity_interest_path(activity), method: :delete,  class: "admin-btn" %>
+              <% end %>
+            <% end %>
+          </div>
         </div>
     <% end %>
   </div>
