--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,16 +32,15 @@
       </div>
     </div>
   <% end %>
-
 </div>
 
 <br>
 
 <div>
 
-  <h3>Upcoming activities</h3>
+  <h3>Upcoming registrations</h3>
 
-  <% @future_user_bookings.each do |activity| %>
+  <% @future_bookings.each do |activity| %>
     <div class="card-dashboard">
       <div class="card-index cards-index">
         <% if activity.photo_db.nil? %>
@@ -60,15 +59,42 @@
       </div>
     </div>
   <% end %>
-
 </div>
 
 <br>
 
 <div>
-  <h3>Past activities</h3>
+  <h3>Events I liked</h3>
 
-  <% @past_user_bookings.each do |activity| %>
+  <% @interests.each do |activity| %>
+    <div class="card-dashboard">
+      <div class="card-index cards-index">
+        <% if activity.photo_db.nil? %>
+          <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
+        <% else %>
+          <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
+        <% end %>
+
+        <div class="card-index-infos">
+            <h3><%= activity.name %></h3>
+        </div>
+      </div>
+
+      <div class="card-btns">
+        <%= link_to "Register", activity_booking_path(activity), method: :post, class: 'btn admin-btn' %>
+        <%= link_to "Unlike", activity_interest_path(activity), method: :delete, class: 'btn admin-btn' %>
+      </div>
+
+    </div>
+  <% end %>
+</div>
+
+<br>
+
+<div>
+  <h3>Past events</h3>
+
+  <% @past_bookings.each do |activity| %>
     <div class="card-dashboard">
       <div class="card-index cards-index">
         <% if activity.photo_db.nil? %>
@@ -89,5 +115,6 @@
 
     </div>
   <% end %>
-
 </div>
+
+
