--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-coolfit">
-  <%= link_to "CoolFit", "#", class: "navbar-logo" %>
+  <%= link_to "CoolFit", root_path, class: "navbar-logo" %>
 
     <div class="navbar flex flex-horizontal-center">
       <%= form_tag '#', method: :get, style:"width:100%" do %>
@@ -28,12 +28,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "My dashboard", "#", class: "dropdown-item" %>
-          <%= link_to "My profile", "#", class: "dropdown-item" %>
-          <%= link_to "Logout", "#", class: "dropdown-item" %>
-        </div>
+        <% if current_user.nil? %>
+          <%= link_to "Sign in", new_user_session_path, class: "btn sign-in-btn" %>
+        <% else %>
+          <%= image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "My dashboard", dashboard_path, class: "dropdown-item" %>
+            <%= link_to "My profile", "#", class: "dropdown-item" %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        <% end %>
       </li>
     </ul>
   </div>
