--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,5 +1,6 @@
 .avatar {
   width: 45px;
+  height: 45px;
   border-radius: 50%;
   border: 1px solid $background-gray;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
