added health to cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,13 +15,20 @@
         <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
+          <p><% activity.healths.each do |health| %>
+            <%= health.description %>
+            <% end  %>
+          </p>
           <p>
             <% activity.fitness_level.times.each do |level|%>
               <i class="fas fa-running"></i>
             <% end %>
           </p>
-          <p>owner Ratings: <%= activity.owner.average_owner_rating %></p>
+          <p><% activity.owner.average_owner_rating.times.each do |rate| %>
+             <i class="fas fa-star"></i>
+            <% end %>
+          </p>
+          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
           <br>
 
         </div>
@@ -44,13 +51,16 @@
         <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
           <p>
             <% activity.fitness_level.times.each do |level|%>
               <i class="fas fa-running"></i>
             <% end %>
           </p>
-          <p>owner Ratings: <%= activity.owner.average_owner_rating %></p>
+          <p><% activity.owner.average_owner_rating.times.each do |rate| %>
+             <i class="fas fa-star"></i>
+            <% end %>
+          </p>
+          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
           <br>
         </div>
       </div>
@@ -73,14 +83,17 @@
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
 
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
           <p>
             <% activity.fitness_level.times.each do |level|%>
               <i class="fas fa-running"></i>
             <% end %>
           </p>
 
-          <p>Owner Ratings: <%= activity.owner.average_owner_rating %></p>
+          <p><% activity.owner.average_owner_rating.times.each do |rate| %>
+              <i class="fas fa-star"></i>
+            <% end %>
+          </p>
+          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
 
         </div>
       </div>
