--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,35 +9,7 @@
 <br>
 
 <div>
-
-  <h3>My events</h3>
-
-  <% @user_activities.each do |activity| %>
-    <div class="card-dashboard">
-      <div class="card-index cards-index">
-        <% if activity.photo_db.nil? %>
-          <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
-        <% else %>
-          <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
-        <% end %>
-
-        <div class="card-index-infos">
-            <h3><%= activity.name %></h3>
-        </div>
-      </div>
-
-      <div class="card-btns">
-        <%= link_to "Edit", edit_activity_path(activity), class: 'btn admin-btn' %>
-        <%= link_to "Delete", activities_path(activity), method: :delete, class: 'btn admin-btn' %>
-      </div>
-    </div>
-  <% end %>
-</div>
-
-<br>
-
-<div>
-  <h3>Upcoming registrations</h3>
+  <h3>Upcoming events</h3>
 
   <div class="future-bookings">
     <% @future_bookings.each do |activity| %>
@@ -49,7 +21,7 @@
 <br>
 
 <div>
-  <h3>Events I liked</h3>
+  <h3>My <%= "♥" %> events</h3>
 
   <div class="interests">
     <% @interests.each do |activity| %>
