--- a/app/views/pages/dashboard_owner.html.erb
+++ b/app/views/pages/dashboard_owner.html.erb
@@ -28,26 +28,11 @@
 
   <h3>My upcoming events</h3>
 
-  <% @future_activities.each do |activity| %>
-    <div class="card-dashboard">
-      <div class="card-index cards-index">
-        <% if activity.photo_db.nil? %>
-          <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
-        <% else %>
-          <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
-        <% end %>
-
-        <div class="card-index-infos">
-            <h3><%= activity.name %></h3>
-        </div>
-      </div>
-
-      <div class="card-btns">
-        <%= link_to "Edit", edit_activity_path(activity), class: 'btn admin-btn' %>
-        <%= link_to "Delete", activities_path(activity), method: :delete, class: 'btn admin-btn' %>
-      </div>
-    </div>
-  <% end %>
+  <div class="future-activities">
+    <% @future_activities.each do |activity| %>
+      <%= render 'activities/future_activities', activity: activity %>
+    <% end %>
+  </div>
 </div>
 
 <div>
