je n'ai rien fait

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -29,17 +29,19 @@
 .admin-btn {
   font-size: 14px;
   font-family: 'Exo 2', sans-serif;
-  background-color: $dark-gray;
-  color: $background-gray;
+  background-color: white;
+  color: $dark-gray;
   width: 100px;
   border-radius: 10px;
   margin-bottom: 10px;
   filter: brightness(95%);
+  text-decoration: none;
 }
 
 .admin-btn:hover {
   color: $orange;
   transition-delay: s150ms;
+  text-decoration: none;
 }
 
 .sign-in-btn {
