--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,7 +2,8 @@
 
 .card-index {
   overflow: hidden;
-  height: 120px;
+  height: 100px;
+  width: 700px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
@@ -18,6 +19,11 @@
     font-size: 20px;
     color: $gray;
   }
+
+   p {
+    font-size: 12px;
+    color: $orange;
+  }
 }
 
 .cards-index a {
@@ -26,8 +32,16 @@
 
 .card-index-img {
   height: 100%;
-  width: 120px;
+  width: 190px;
   object-fit: cover;
+}
+
+.card-btns-index {
+  display: flex;
+  margin-left: 30px;
+  margin-right: 30px;
+  flex-direction: column;
+  align-self: center;
 }
 
 // DASHBOARD
@@ -58,6 +72,7 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  font-size: 16px;
 }
 
 .card-landing-img {
