--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -8,15 +8,17 @@
       <%= link_to activity do %>
         <div class="card-index">
           <% if activity.photo_db.nil? %>
-            <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-index-img' %>
+            <%= cl_image_tag activity.photo_user, class: 'card-index-img' %>
           <% else %>
-            <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-index-img' %>
+            <%= image_tag activity.photo_db, class: 'card-index-img' %>
           <% end %>
           <div class="card-index-infos">
             <h3><%= activity.name %></h3>
-              <% end %>
-          </div>
-          <div>
+             <p><% activity.healths.each do |health| %>
+            <%= health.description %>
+            <% end %>
+          </p>
+          <% end %>
             <% if activity.owner != current_user %>
               <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
                 <%= link_to "♡", activity_interest_path(activity), method: :post,  class: "admin-btn" %>
@@ -25,6 +27,12 @@
               <% end %>
             <% end %>
           </div>
+          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
+          <div class="card-btns-index">
+        <%= link_to "Register", activity_booking_path(activity), method: :post, class: 'btn admin-btn' %>
+      </div>
+      </div>
+          <div>
         </div>
     <% end %>
   </div>
