--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 <h1>Top categories</h1>
 <br>
 
-<h3> <%= @top_category1.description %></h3>
+<div class="d-flex justify-content-start">
+ <p><%= image_tag @top_category1.logo%></p>
+ <h3><%= @top_category1.description %></h3>
+</div>
 
 <div class="cards" id="landing">
   <% @top_category1.activities.each do |activity| %>
@@ -14,22 +17,15 @@
         <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
-          <p><% activity.healths.each do |health| %>
-            <%= health.description %>
-            <% end  %>
-          </p>
-          <p>
+            <div>
+              <p><% activity.owner.average_owner_rating.times.each do |rate| %>
+                <i class="fas fa-star"></i>
+              <% end %>
+              </p>
             <% activity.fitness_level.times.each do |level|%>
               <i class="fas fa-running"></i>
             <% end %>
-          </p>
-          <p><% activity.owner.average_owner_rating.times.each do |rate| %>
-             <i class="fas fa-star"></i>
-            <% end %>
-          </p>
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
-          <br>
-
+          </div>
         </div>
       </div>
   <% end %>
@@ -59,7 +55,6 @@
              <i class="fas fa-star"></i>
             <% end %>
           </p>
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
           <br>
         </div>
       </div>
@@ -92,8 +87,6 @@
               <i class="fas fa-star"></i>
             <% end %>
           </p>
-          <p><%= image_tag activity.owner.avatar, class: 'avatar' %></p>
-
         </div>
       </div>
   <% end %>
@@ -102,7 +95,7 @@
 <br>
 
 <div class="d-flex justify-content-center">
-  <%= link_to "Browse more activities", activities_path, class:"btn btn-search"%>
+  <%= link_to "More activities", activities_path, class:"btn btn-search"%>
 </div>
 
 
