refined dashboard_owner page and buttons

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -21,7 +21,7 @@
 <br>
 
 <div>
-  <h3>My <%= "♥" %> events</h3>
+  <h3>My <i class="fa fa-heart"></i> events</h3>
 
   <div class="interests">
     <% @interests.each do |activity| %>
