--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -4,6 +4,31 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
+    <%= f.input :name, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :category, collection: Category.all, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :location, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :fitness_level, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :time, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :duration, class: "form-control" %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :description, class: "form-control" %>
   </div>
 
   <div class="form-actions">
