--- a/app/views/activities/_future_activities.html.erb
+++ b/app/views/activities/_future_activities.html.erb
@@ -4,6 +4,6 @@
 
   <div class="card-btns">
     <%= link_to "Edit", edit_activity_path(activity), class: 'btn admin-btn' %>
-    <%= link_to "Delete", activities_path(activity), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: 'btn admin-btn' %>
+    <%= link_to "Delete", activity_path(activity), method: :delete, remote: true, data: {confirm: "Are you sure?"}, class: 'btn admin-btn' %>
   </div>
 </div>
