showpage done, just add extra feature jumping arrow tomorrow

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -34,3 +34,13 @@
   display:flex;
   justify-content: flex-start;
 }
+
+.banner-show {
+ height: 70vh;
+ background-size: cover;
+ background-position: center;
+}
+
+.navbar-coolfit{
+ background: rgba(39, 39, 39, 0.7);
+}
