--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -14,11 +14,11 @@
   top: 0;
 }
 
-// @media (min-width: 576px) {
-//   #map {
-//     display: none;
-//   }
-// }
+@media (min-width: 576px) {
+  #map {
+    display: none;
+  }
+}
 
 @media (min-width: 1200px) {
   #map {
