--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -6,7 +6,7 @@
     <% @activities.each do |activity| %>
 
       <%= link_to activity do %>
-        <div class="card-index">
+        <div class="card-index zoom">
           <% if activity.photo_db.nil? %>
             <%= cl_image_tag activity.photo_user, class: 'card-index-img' %>
           <% else %>
@@ -14,10 +14,9 @@
           <% end %>
           <div class="card-index-infos">
             <h3><%= activity.name %></h3>
-             <p><% activity.healths.each do |health| %>
-            <%= health.description %>
-            <% end %>
-          </p>
+            <p>
+              <%=activity.healths.map(&:description).join(' / ') %>
+            </p>
           <% end %>
             <% if activity.owner != current_user %>
               <% if @user_interests.select{ |interest| interest.activity == activity } == [] %>
