--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,15 +8,86 @@
 
 <div class="cards" id="landing">
   <% @top_category1.activities.each do |activity| %>
+    <% unless activity.time.to_date.past? %>
+      <%= link_to activity do %>
+        <div class="card-landing zoom">
+          <% if activity.photo_db.nil? %>
+            <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-landing-img' %>
+          <% else %>
+            <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-landing-img' %>
+          <% end %>
+          <div class="card-landing-infos">
+            <p><%= activity.name %></p>
+            <div>
+              <p><% activity.owner.average_owner_rating.times.each do |rate| %>
+                <i class="fas fa-star"></i>
+              <% end %>
+              </p>
+              <% activity.fitness_level.times.each do |level|%>
+                <i class="fas fa-running"></i>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  <% end %>
+</div>
 
-      <div class="card-landing">
-        <% if activity.photo_db.nil? %>
-          <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-landing-img' %>
-        <% else %>
-          <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-landing-img' %>
-        <% end %>
+<br>
+
+<div class="d-flex justify-content-start">
+<p><%= image_tag @top_category2.logo%></p>
+<h3> <%= @top_category2.description %></h3>
+</div>
+
+<div class="cards" id="landing">
+  <% @top_category2.activities.each do |activity| %>
+    <% unless activity.time.to_date.past? %>
+      <%= link_to activity do %>
+        <div class="card-landing zoom">
+          <% if activity.photo_db.nil? %>
+            <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-landing-img' %>
+          <% else %>
+            <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-landing-img' %>
+          <% end %>
         <div class="card-landing-infos">
           <p><%= activity.name %></p>
+          <div>
+            <p><% activity.owner.average_owner_rating.times.each do |rate| %>
+              <i class="fas fa-star"></i>
+            <% end %>
+            </p>
+            <% activity.fitness_level.times.each do |level|%>
+              <i class="fas fa-running"></i>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    <% end %>
+  <% end %>
+</div>
+
+<br>
+
+<div class="d-flex justify-content-start">
+<p><%= image_tag @top_category3.logo%></p>
+<h3> <%= @top_category3.description %></h3>
+</div>
+
+<div class="cards" id="landing">
+  <% @top_category3.activities.each do |activity| %>
+    <% unless activity.time.to_date.past? %>
+      <%= link_to activity do %>
+        <div class="card-landing zoom">
+          <% if activity.photo_db.nil? %>
+            <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-landing-img' %>
+          <% else %>
+            <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-landing-img' %>
+          <% end %>
+          <div class="card-landing-infos">
+            <p><%= activity.name %></p>
             <div>
               <p><% activity.owner.average_owner_rating.times.each do |rate| %>
                 <i class="fas fa-star"></i>
@@ -28,67 +99,8 @@
           </div>
         </div>
       </div>
-  <% end %>
-</div>
-
-<br>
-
-<h3> <%= @top_category2.description %></h3>
-
-<div class="cards" id="landing">
-  <% @top_category2.activities.each do |activity| %>
-
-      <div class="card-landing">
-        <% if activity.photo_db.nil? %>
-          <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-landing-img' %>
-        <% else %>
-          <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-landing-img' %>
-        <% end %>
-        <div class="card-landing-infos">
-          <p><%= activity.name %></p>
-          <p>
-            <% activity.fitness_level.times.each do |level|%>
-              <i class="fas fa-running"></i>
-            <% end %>
-          </p>
-          <p><% activity.owner.average_owner_rating.times.each do |rate| %>
-             <i class="fas fa-star"></i>
-            <% end %>
-          </p>
-          <br>
-        </div>
-      </div>
-  <% end %>
-</div>
-
-<br>
-
-<h3> <%= @top_category3.description %></h3>
-
-<div class="cards" id="landing">
-  <% @top_category3.activities.each do |activity| %>
-
-      <div class="card-landing">
-        <% if activity.photo_db.nil? %>
-          <%= cl_image_tag activity.photo_user, crop: :fill, gravity: :face, class: 'card-landing-img' %>
-        <% else %>
-          <%= image_tag activity.photo_db, crop: :fill, gravity: :face, class: 'card-landing-img' %>
-        <% end %>
-        <div class="card-landing-infos">
-          <p><%= activity.name %></p>
-
-          <p>
-            <% activity.fitness_level.times.each do |level|%>
-              <i class="fas fa-running"></i>
-            <% end %>
-          </p>
-
-          <p><% activity.owner.average_owner_rating.times.each do |rate| %>
-              <i class="fas fa-star"></i>
-            <% end %>
-          </p>
-        </div>
-      </div>
+      <% end %>
+    <% end %>
   <% end %>
 </div>
 
