implemented cloudinary tag on avatar pictures and upload in edit profile

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -20,7 +20,7 @@
 
   <div class="form-inputs ">
       <%= f.input :avatar, label: "Profile picture", input_html: {style: "display:none;"}, label_html: {class: "btn", style: "width: 130px;"} %>
-      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :avatar_cache, as: :hidden %>
   </div>
 
 
