--- a/app/views/pages/dashboard_owner.html.erb
+++ b/app/views/pages/dashboard_owner.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between">
   <h1>See below the events you are organizing <span class="banner-logo"><%= current_user.username %></span>!</h1>
-  <%= cl_image_tag current_user.avatar, class:"avatar-large mr-4 mt-2" %>
+  <%= cl_image_tag(current_user.avatar, class:"avatar-large mr-4 mt-2") %>
 </div>
 
 <br>
