--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  margin-top: 10px;
   margin-right: 10px;
 }
 
@@ -60,6 +61,13 @@
 
 // LANDING
 
+.category-logo {
+  height: 50px;
+  width: 50px;
+  margin-right: 10px
+}
+
+
 .card-landing {
   overflow: hidden;
   background: white;
@@ -77,6 +85,9 @@
   align-items: flex-end;
   position: relative;
   font-size: 16px;
+}
+
+.card-landing-infos :hover {
   text-decoration: none;
 }
 
