--- a/app/views/interests/_interests.html.erb
+++ b/app/views/interests/_interests.html.erb
@@ -3,7 +3,7 @@
   <%= render 'shared/card_index', activity: activity %>
 
   <div class="card-btns">
-    <%= link_to "Register", activity_booking_path(activity), method: :post, remote: true, class: 'btn admin-btn' %>
+    <%= link_to "Register", activity_bookings_path(activity), method: :post, remote: true, class: 'btn admin-btn' %>
     <%= link_to "Unlike", activity_interest_path(activity), method: :delete, remote: true, class: 'btn admin-btn' %>
   </div>
 
