--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -5,6 +5,15 @@
   border: 1px solid $background-gray;
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
+
+.avatar-medium {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid $background-gray;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+}
+
 .avatar-large {
   width: 90px;
   height: 90px;
