--- a/app/views/pages/show_profile.html.erb
+++ b/app/views/pages/show_profile.html.erb
@@ -17,7 +17,7 @@
     </tr>
     <tr>
       <th>My profile picture: </th>
-      <td><%= cl_image_tag(current_user.avatar, class:"avatar-large mr-4 mt-2") %></td>
+      <td> <%= render 'shared/avatar_small' %></td>
     </tr>
     <tr>
       <th>My age: </th>
